Add environment configuration to deployment workflows

--- a/.github/workflows/deploy-manual.yml
+++ b/.github/workflows/deploy-manual.yml
@@ -27,7 +27,8 @@ jobs:
   deploy:
     name: Deploy CDK Stack
     runs-on: ubuntu-latest
-    
+    environment: aws-mhj
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
