--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,8 @@ jobs:
   deploy:
     name: Deploy CDK Stack
     runs-on: ubuntu-latest
-    
+    environment: aws-mhj
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
