--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,9 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          cd infrastructure && npm ci && cd ..
 
       - name: Build TypeScript
         run: npm run build
@@ -50,13 +52,13 @@ jobs:
         continue-on-error: true
 
       - name: CDK Synth
-        run: cdk synth
+        run: cd infrastructure && cdk synth
         env:
           CDK_DEFAULT_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
           CDK_DEFAULT_REGION: ${{ env.AWS_REGION }}
 
       - name: CDK Deploy
-        run: cdk deploy --require-approval never
+        run: cd infrastructure && cdk deploy --require-approval never
         env:
           CDK_DEFAULT_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
           CDK_DEFAULT_REGION: ${{ env.AWS_REGION }}
