--- a/package.json
+++ b/package.json
@@ -2,38 +2,22 @@
   "name": "lambda-serverless",
   "version": "1.0.0",
   "description": "AWS Serverless Lambda setup with CDK",
-  "main": "handler.js",
+  "private": true,
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "cdk": "cdk",
-    "deploy": "cdk deploy",
-    "destroy": "cdk destroy",
-    "synth": "cdk synth",
-    "diff": "cdk diff",
+    "build": "cd infrastructure && npm run build",
+    "watch": "cd infrastructure && npm run watch",
+    "cdk": "cd infrastructure && npx cdk",
+    "deploy": "cd infrastructure && npm run deploy",
+    "destroy": "cd infrastructure && npm run destroy",
+    "synth": "cd infrastructure && npm run synth",
+    "diff": "cd infrastructure && npm run diff",
+    "localstack:up": "docker compose up -d",
+    "localstack:down": "docker compose down",
     "localstack:logs": "docker compose logs -f localstack",
-    "bootstrap:local": "node scripts/run-with-localstack.js bootstrap",
-    "deploy:local": "node scripts/run-with-localstack.js deploy --require-approval never",
-    "destroy:local": "node scripts/run-with-localstack.js destroy --force"
+    "bootstrap:local": "cd infrastructure && node ../scripts/run-with-localstack.js bootstrap",
+    "deploy:local": "cd infrastructure && node ../scripts/run-with-localstack.js deploy --require-approval never",
+    "destroy:local": "cd infrastructure && node ../scripts/run-with-localstack.js destroy --force"
   },
-  "keywords": [
-    "aws",
-    "lambda",
-    "cdk",
-    "cloudformation"
-  ],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^20.10.0",
-    "aws-cdk": "^2.100.0",
-    "dotenv": "^16.3.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.0"
-  },
-  "dependencies": {
-    "aws-cdk-lib": "^2.100.0",
-    "constructs": "^10.3.0",
-    "source-map-support": "^0.5.21"
-  }
+  "keywords": ["aws", "lambda", "cdk", "cloudformation"],
+  "license": "ISC"
 }
