--- a/package.json
+++ b/package.json
@@ -4,20 +4,11 @@
   "description": "AWS Serverless Lambda setup with CDK",
   "private": true,
   "scripts": {
-    "build": "cd infrastructure && npm run build",
-    "watch": "cd infrastructure && npm run watch",
-    "cdk": "cd infrastructure && npx cdk",
-    "deploy": "cd infrastructure && npm run deploy",
-    "destroy": "cd infrastructure && npm run destroy",
-    "synth": "cd infrastructure && npm run synth",
-    "diff": "cd infrastructure && npm run diff",
-    "localstack:up": "docker compose up -d",
-    "localstack:down": "docker compose down",
-    "localstack:logs": "docker compose logs -f localstack",
-    "bootstrap:local": "cd infrastructure && node ../scripts/run-with-localstack.js bootstrap",
+    "test:build": "cd infrastructure && npm run build && npm run synth",
+    "setup": "docker compose up -d && echo 'Starting LocalStack...' && sleep 20 && (node scripts/run-with-localstack.js setup-hosts || true) && echo 'Bootstrap LocalStack...' && cd infrastructure && node ../scripts/run-with-localstack.js bootstrap",
+    "dev": "(cd infrastructure && node ../scripts/run-with-localstack.js deploy --all --require-approval never 2>&1) | tee .localstack-deploy.log && node scripts/echo-localstack-urls.js .localstack-deploy.log && docker compose logs -f localstack",
     "localstack:setup-hosts": "node scripts/run-with-localstack.js setup-hosts",
-    "deploy:local": "cd infrastructure && node ../scripts/run-with-localstack.js deploy --all --require-approval never",
-    "destroy:local": "cd infrastructure && node ../scripts/run-with-localstack.js destroy --all --force"
+    "destroy": "cd infrastructure && node ../scripts/run-with-localstack.js destroy --all --force && docker compose down"
   },
   "keywords": ["aws", "lambda", "cdk", "cloudformation"],
   "license": "ISC",
