--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test:build": "cd infrastructure && npm run build && npm run synth",
-    "build": "cd infrastructure && npm run build"
+    "build": "cd infrastructure && npm run build",
+    "build:lambda": "node scripts/build-lambda.js"
   },
   "keywords": [
     "aws",
