--- a/package.json
+++ b/package.json
@@ -6,28 +6,12 @@
   "scripts": {
     "test:build": "cd infrastructure && npm run build && npm run synth",
     "build": "cd infrastructure && npm run build",
-    "build:lambda": "node scripts/build-lambda.js",
-    "setup": "node scripts/setup.js",
-    "dev": "node scripts/dev.js",
-    "dev:watch": "node scripts/dev-watch.js",
-    "watch": "node scripts/watch-lambda.js",
-    "watch:deploy": "node scripts/watch-lambda-redeploy.js",
-    "destroy": "node scripts/run-with-localstack.js cdklocal destroy --all --force && docker compose down",
-    "reset": "npm run destroy && npm run setup && npm run dev"
+    "build:lambda": "node scripts/build-lambda.js"
   },
-  "keywords": [
-    "aws",
-    "lambda",
-    "cdk",
-    "cloudformation"
-  ],
+  "keywords": ["aws", "lambda", "cdk", "cloudformation"],
   "license": "ISC",
   "devDependencies": {
-    "@aws-sdk/client-cloudformation": "^3.0.0",
     "aws-cdk": "^2.100.0",
-    "aws-cdk-local": "^3.0.0",
-    "awscli-local": "^0.23.0",
-    "chokidar": "^3.6.0",
     "rimraf": "^6.0.0"
   }
 }
