--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test:build": "cd infrastructure && npm run build && npm run synth",
     "build": "cd infrastructure && npm run build",
-    "build:lambda": "node scripts/build-lambda.js"
+    "build:lambda": "node scripts/build-lambda.js",
+    "local:build": "npm run build:lambda && sam build --config-file dev/samconfig.toml",
+    "local:start": "sam local start-api --config-file dev/samconfig.toml"
   },
   "keywords": ["aws", "lambda", "cdk", "cloudformation"],
   "license": "ISC",
